# powerflow-gnn

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
configs/: default.yaml
examples/: benchmark_speed.py  plot_bus_distribution.py  power_grid_5bus.py  verify_strict_physics.py  visualize_grid.py
src/: __init__.py
src/models/: __init__.py  attention_layers.py  gnn.py  layers.py  physics_layers.py  power_flow_models.py  power_layers.py
src/training/: compare_models.py  metrics.py  train_100bus.py  train_power_flow.py  train_supernode.py  trainer.py
src/utils/: config.py
tests/: test_gnn.py  test_graph.py  test_layers.py  test_physics.py
